k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: lumina-service
spec:
  type: ClusterIP
  selector:
    app: lumina-app
  ports:
    - port: 80
      targetPort: 80
