k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lumina-ingress
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /dev
        pathType: Prefix
        backend:
          service:
            name: lumina-service
            port:
              number: 80
      - path: /gap
        pathType: Prefix
        backend:
          service:
            name: lumina-service
            port:
              number: 80
      - path: /vap
        pathType: Prefix
        backend:
          service:
            name: lumina-service
            port:
              number: 80
